k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emi-app-deployment
  namespace: default
  labels:
    app: emi-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: emi-app
  template:
    metadata:
      labels:
        app: emi-app
    spec:
      containers:
      - name: emi-app
        image: farhan091/1fi-assignment-app:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 3000
